[gd_scene load_steps=18 format=2]

[ext_resource path="res://Babies/MeanBaby.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Babies/SmallBaby.tscn" type="PackedScene" id=3]
[ext_resource path="res://Babies/DeathBringerBaby.tscn" type="PackedScene" id=4]
[ext_resource path="res://Babies/BuffBaby.tscn" type="PackedScene" id=5]
[ext_resource path="res://Babies/MadScientistBaby.tscn" type="PackedScene" id=6]
[ext_resource path="res://BadGuys/BadGuy.tscn" type="PackedScene" id=7]
[ext_resource path="res://TestScript.gd" type="Script" id=8]
[ext_resource path="res://SpriteSheets/BabyTown2BoomerDoomer.png" type="Texture" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="NavigationPolygon" id=7]
vertices = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="TileSet" id=8]
0/name = "icon.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "icon.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "icon.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 32, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "icon.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 32, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 5 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "icon.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 6 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "BabyTown2BoomerDoomer.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 32, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/navigation = SubResource( 7 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="Navigation2D" type="Navigation2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="Navigation2D"]
tile_set = SubResource( 8 )
format = 1
tile_data = PoolIntArray( -524311, 4, 0, -524310, 4, 0, -524309, 4, 0, -524308, 4, 0, -524307, 4, 0, -524306, 4, 0, -524305, 4, 0, -524304, 4, 0, -524303, 4, 0, -524302, 4, 0, -524301, 4, 0, -524300, 4, 0, -524299, 4, 0, -524298, 4, 0, -524297, 4, 0, -524296, 4, 0, -524295, 4, 0, -524294, 4, 0, -524293, 4, 0, -524292, 4, 0, -524291, 4, 0, -524290, 4, 0, -524289, 4, 0, -589824, 4, 0, -589823, 4, 0, -589822, 4, 0, -589821, 4, 0, -589820, 4, 0, -589819, 4, 0, -589818, 4, 0, -458776, 4, 0, -458775, 4, 0, -524282, 4, 0, -524281, 4, 0, -393241, 4, 0, -393240, 4, 0, -458745, 4, 0, -458744, 4, 0, -458743, 4, 0, -458742, 4, 0, -458741, 4, 0, -458740, 4, 0, -458739, 4, 0, -458738, 4, 0, -458737, 4, 0, -458736, 4, 0, -458735, 4, 0, -458734, 4, 0, -458733, 4, 0, -458732, 4, 0, -458731, 4, 0, -458730, 4, 0, -458729, 4, 0, -458728, 4, 0, -458727, 4, 0, -458726, 4, 0, -458725, 4, 0, -458724, 4, 0, -458723, 4, 0, -458722, 4, 0, -458721, 4, 0, -458720, 4, 0, -458719, 4, 0, -458718, 4, 0, -458717, 4, 0, -458716, 4, 0, -458715, 4, 0, -458714, 4, 0, -458713, 4, 0, -458712, 4, 0, -458711, 4, 0, -458710, 4, 0, -327706, 4, 0, -327705, 4, 0, -393174, 4, 0, -262171, 4, 0, -262170, 4, 0, -327638, 4, 0, -196636, 4, 0, -196635, 4, 0, -262102, 4, 0, -131101, 4, 0, -131100, 4, 0, -131091, 4, 0, -131090, 4, 0, -131089, 4, 0, -131088, 4, 0, -131087, 4, 0, -196566, 4, 0, -65566, 4, 0, -65565, 4, 0, -65540, 4, 0, -65539, 4, 0, -65538, 4, 0, -65537, 4, 0, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 4, 0, -131068, 4, 0, -131067, 4, 0, -131066, 4, 0, -131065, 4, 0, -131030, 4, 0, -31, 4, 0, -30, 4, 0, -65529, 4, 0, -65528, 4, 0, -65504, 4, 0, -65503, 4, 0, -65502, 4, 0, -65501, 4, 0, -65500, 4, 0, -65499, 4, 0, -65498, 4, 0, -65497, 4, 0, -65494, 4, 0, 65505, 4, 0, 8, 4, 0, 9, 4, 0, 42, 4, 0, 131041, 4, 0, 131048, 4, 0, 131049, 4, 0, 131050, 4, 0, 131051, 4, 0, 131061, 4, 0, 131062, 4, 0, 131063, 4, 0, 131064, 4, 0, 131065, 4, 0, 65545, 4, 0, 65546, 4, 0, 65578, 4, 0, 196577, 4, 0, 131114, 4, 0, 262113, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 4, 0, 196630, 4, 0, 196631, 4, 0, 196632, 4, 0, 196633, 4, 0, 196634, 4, 0, 196646, 4, 0, 196650, 4, 0, 327649, 4, 0, 262180, 4, 0, 262186, 4, 0, 262187, 4, 0, 262188, 4, 0, 262189, 4, 0, 262190, 4, 0, 262191, 4, 0, 262192, 4, 0, 262193, 4, 0, 262194, 4, 0, 393184, 4, 0, 393185, 4, 0, 393186, 4, 0, 393187, 4, 0, 393188, 4, 0, 393189, 4, 0, 393190, 4, 0, 393191, 4, 0, 393192, 4, 0, 393193, 4, 0, 393194, 4, 0, 393195, 4, 0, 393196, 4, 0, 393197, 4, 0, 327730, 4, 0, 458720, 4, 0, 458733, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393250, 4, 0, 393266, 4, 0, 524256, 4, 0, 524269, 4, 0, 524270, 4, 0, 458756, 4, 0, 458757, 4, 0, 458802, 4, 0, 589792, 4, 0, 589809, 4, 0, 589810, 4, 0, 589811, 4, 0, 589812, 4, 0, 589813, 4, 0, 589814, 4, 0, 524320, 4, 0, 524338, 4, 0, 655328, 4, 0, 655350, 4, 0, 589866, 4, 0, 589867, 4, 0, 589868, 4, 0, 589869, 4, 0, 589870, 4, 0, 589871, 4, 0, 589874, 4, 0, 720864, 4, 0, 720886, 4, 0, 655402, 4, 0, 655407, 4, 0, 655410, 4, 0, 786400, 4, 0, 786401, 4, 0, 786402, 4, 0, 786403, 4, 0, 786404, 4, 0, 786405, 4, 0, 786406, 4, 0, 786407, 4, 0, 786408, 4, 0, 786409, 4, 0, 786410, 4, 0, 786411, 4, 0, 786412, 4, 0, 786413, 4, 0, 786414, 4, 0, 786415, 4, 0, 786416, 4, 0, 786417, 4, 0, 786418, 4, 0, 786419, 4, 0, 786420, 4, 0, 786421, 4, 0, 786422, 4, 0, 786423, 4, 0, 786424, 4, 0, 786425, 4, 0, 786426, 4, 0, 786427, 4, 0, 786428, 4, 0, 786429, 4, 0, 786430, 4, 0, 786431, 4, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 4, 0, 720918, 4, 0, 720919, 4, 0, 720920, 4, 0, 720921, 4, 0, 720922, 4, 0, 720923, 4, 0, 720924, 4, 0, 720925, 4, 0, 720926, 4, 0, 720927, 4, 0, 720928, 4, 0, 720929, 4, 0, 720930, 4, 0, 720931, 4, 0, 720932, 4, 0, 720933, 4, 0, 720934, 4, 0, 720935, 4, 0, 720936, 4, 0, 720937, 4, 0, 720938, 4, 0, 720943, 4, 0, 720946, 4, 0, 786479, 4, 0, 786482, 4, 0, 852015, 4, 0, 852018, 4, 0, 917551, 4, 0, 917552, 4, 0, 917553, 4, 0, 917554, 4, 0 )

[node name="SmallBaby" parent="." instance=ExtResource( 3 )]
position = Vector2( 120, -168 )

[node name="MeanBaby" parent="." instance=ExtResource( 1 )]
position = Vector2( 216, -152 )

[node name="DeathBringerBaby" parent="." instance=ExtResource( 4 )]
position = Vector2( -24, -184 )

[node name="BuffBaby" parent="." instance=ExtResource( 5 )]
position = Vector2( 64, -168 )

[node name="MadScientistBaby" parent="." instance=ExtResource( 6 )]
position = Vector2( 168, -168 )

[node name="BadGuy3" parent="." instance=ExtResource( 7 )]
position = Vector2( 1024, 608 )

[node name="BadGuy4" parent="." instance=ExtResource( 7 )]
position = Vector2( -96, 600 )

[node name="BadGuy5" parent="." instance=ExtResource( 7 )]
position = Vector2( -208, 600 )

[node name="BadGuy6" parent="." instance=ExtResource( 7 )]
position = Vector2( -320, 600 )

[node name="JumpZone" type="Area2D" parent="."]
position = Vector2( -160, 648 )
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="JumpZone"]
position = Vector2( -232, 24 )
polygon = PoolVector2Array( 136, 32, 264, 32, 264, -32, 136, -32 )
[connection signal="BabyGlobalPosition" from="." to="BadGuy3" method="_on_BabyPositionGet"]
[connection signal="BabyGlobalPosition" from="." to="BadGuy5" method="_on_BabyPositionGet"]
[connection signal="BabyGlobalPosition" from="." to="BadGuy4" method="_on_BabyPositionGet"]
[connection signal="BabyGlobalPosition" from="." to="BadGuy6" method="_on_BabyPositionGet"]
[connection signal="BadGuyDead" from="BadGuy3" to="." method="_on_BadGuyDead"]
[connection signal="BadGuyShoot" from="BadGuy3" to="." method="_on_BadGuyShoot"]
[connection signal="BadGuyDead" from="BadGuy4" to="." method="_on_BadGuyDead"]
[connection signal="BadGuyShoot" from="BadGuy4" to="." method="_on_BadGuyShoot"]
[connection signal="BadGuyDead" from="BadGuy5" to="." method="_on_BadGuyDead"]
[connection signal="BadGuyShoot" from="BadGuy5" to="." method="_on_BadGuyShoot"]
[connection signal="BadGuyDead" from="BadGuy6" to="." method="_on_BadGuyDead"]
[connection signal="BadGuyShoot" from="BadGuy6" to="." method="_on_BadGuyShoot"]
